[build-system]
requires = ["setuptools>=42", "cffi>=1.0.0", 'numpy >=1.20.0, < 1.23.0', 'scipy >= 1.6.3', 'cython >= 0.29.0, < 1.0.0', 'pandas >= 1.0.0', 'patsy', 'seaborn == 0.11.0', 'statsmodels >= 0.12.0', 'tqdm >= 4.1.0', 'scikit-learn > 0.24', 'cloudpickle >= 2.0.0', 'kabuki >= 0.6.0', 'PyMC >= 2.3.3', 'arviz >= 0.12', 'ssm-simulators == 0.3.2']
build-backend = "setuptools.build_meta"
